Fix plugin sidebar with on mobile
The className for the plugin sidebar was changed in 644b7e83c. But
this was missed in one location. This commit changes the class there
too.

--- a/edit-post/components/sidebar/style.scss
+++ b/edit-post/components/sidebar/style.scss
@@ -90,7 +90,7 @@
 
 .edit-post-layout.is-sidebar-opened {
 	.edit-post-sidebar,
-	.edit-post-plugins-panel {
+	.edit-post-plugin-sidebar__sidebar-layout {
 		/* Sidebar covers screen on mobile */
 		width: 100%;
 
